--- a/lazaro-server-dev.yml
+++ b/lazaro-server-dev.yml
@@ -7,7 +7,7 @@ spring:
       max-file-size: 2MB
       max-request-size: 3MB
   application:
-    name: lazaro-server
+    name: crestone-server
 
   security:
     oauth2:
